[DDW-541] Dialog change - Step 2

--- a/source/renderer/app/components/voting/voting-registration-wizar-steps/VotingRegistrationStepsSign.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizar-steps/VotingRegistrationStepsSign.scss
@@ -2,11 +2,9 @@
 @import '../../../themes/mixins/loading-spinner';
 @import '../../../themes/mixins/error-message';
 
-.votingRegistrationStepsDepositWrapper {
-  .content {
-    .description {
-      color: var(--theme-voting-registration-steps-description-color);
-    }
+.component {
+  .description {
+    color: var(--theme-voting-registration-steps-description-color);
   }
 
   .feesWrapper {
