--- a/source/renderer/app/components/widgets/ProgressBarLarge.scss
+++ b/source/renderer/app/components/widgets/ProgressBarLarge.scss
@@ -12,6 +12,7 @@
 }
 
 .rightLabel {
+  opacity: 0.5;
   b {
     font-family: var(--font-bold);
   }
@@ -23,6 +24,16 @@
   height: 24px;
   position: relative;
   width: 100%;
+  &.loading {
+    background: repeating-linear-gradient(
+      -63deg,
+      var(--theme-staking-progress-stripe-dark-1-background-color),
+      var(--theme-staking-progress-stripe-dark-1-background-color) 10px,
+      var(--theme-staking-progress-stripe-dark-2-background-color) 10px,
+      var(--theme-staking-progress-stripe-dark-2-background-color) 20px
+    );
+    opacity: 0.3;
+  }
 }
 
 .progress {
