--- a/source/renderer/app/components/wallet/WalletConnectDialog.scss
+++ b/source/renderer/app/components/wallet/WalletConnectDialog.scss
@@ -71,6 +71,13 @@
           margin-top: 11px;
         }
       }
+
+      .externalLink {
+        font-family: var(--font-regular);
+        font-size: 16px;
+        margin-right: 4px;
+        word-break: break-word;
+      }
     }
 
     .hardwareWalletStatusWrapper {
