[DDW-528] Fix spacing issues with the info icon on the 'Set password' dialog

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -26,7 +26,7 @@
 
       > span {
         height: 12px;
-        left: 145px;
+        left: 158px;
         outline: none;
         position: absolute;
         top: 4px;
@@ -35,6 +35,16 @@
 
       &.jpLangTooltipIcon {
         > span {
+          left: 134px !important;
+        }
+      }
+
+      .currentPassword + span {
+        left: 145px !important;
+      }
+
+      &.jpLangTooltipIcon {
+        .currentPassword + span {
           left: 135px !important;
         }
       }
