[DDW-533] Add "Fix connection Issues" link to the hardware wallet pairing dialog (#2336)
* [DDW-533] INIT connection issue link on the hw pairing dialog

* [DDW-533] Apply latest designs and support links update

* [DDW-533] Add Translations

* [DDW-533] Updates CHANGELOG

* [DDW-533] Update to fit latest design proposal

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/wallet/WalletConnectDialog.scss
+++ b/source/renderer/app/components/wallet/WalletConnectDialog.scss
@@ -78,6 +78,24 @@
       width: 100%;
     }
 
+    .hardwareWalletIssueArticleWrapper {
+      margin-top: 20px;
+
+      p {
+        color: var(--theme-hardware-wallet-message-color);
+        font-family: var(--font-light);
+        font-size: 16px;
+        line-height: 22px;
+      }
+
+      .externalLink {
+        font-family: var(--font-regular);
+        font-size: 16px;
+        margin-right: 4px;
+        word-break: break-word;
+      }
+    }
+
     .error {
       @include error-message;
       margin-top: 27px;
