--- a/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
@@ -17,7 +17,7 @@
   padding: 10px;
   width: 100%;
 
-  .nativeTokenContainer {
+  .assetsContainer {
     align-items: center;
     display: flex;
     height: 76px;
@@ -26,8 +26,8 @@
     padding: 20px 30px 20px 20px;
     width: calc(50% - 20px);
 
-    .nativeTokenRightContainer {
-      .nativeTokenSendButton {
+    .assetRightContainer {
+      .assetSendButton {
         border-radius: 3px;
         cursor: pointer;
         font-size: 11px;
@@ -59,7 +59,7 @@
   }
 }
 
-.numberOfTokens {
+.numberOfAssets {
   color: var(--theme-transactions-list-group-date-color);
   font-family: var(--font-regular);
   font-size: 16px;
@@ -68,7 +68,7 @@
   padding: 0 20px 0 40px;
 }
 
-.walletName {
+.assetName {
   color: var(--theme-bordered-box-text-color);
   font-family: var(--font-semibold);
   font-size: 16px;
@@ -77,7 +77,7 @@
   user-select: text;
 }
 
-.walletAmount {
+.assetAmount {
   color: var(--theme-bordered-box-text-color);
   font-family: var(--font-light);
   font-size: 16px;
