[DDW-541] UI improvements

--- a/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsChooseWallet.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsChooseWallet.scss
@@ -38,6 +38,7 @@
 
     :global {
       .SimpleOptions_option {
+        align-items: center;
         display: flex;
         height: 50px;
         padding-bottom: 0;
