[DDW-541] Progress bar animated background

--- a/source/renderer/app/components/widgets/ProgressBarLarge.scss
+++ b/source/renderer/app/components/widgets/ProgressBarLarge.scss
@@ -40,6 +40,7 @@
 
 .progress {
   align-items: center;
+  animation: animatedStripesBackground 2s linear infinite;
   border-radius: 5px;
   display: flex;
   height: 100%;
