[DDW-541] Updates text copy and adds Japanese translations

--- a/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsQrCode.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsQrCode.scss
@@ -15,12 +15,19 @@
     margin-top: 40px;
     text-align: center;
 
-    p.boldText {
-      font-weight: bold;
-    }
+    p {
+      &.boldText,
+      span > span {
+        font-weight: bold;
+      }
 
-    p:last-child {
-      color: var(--theme-voting-registration-steps-description-color);
+      &:not(.boldText) {
+        color: var(--theme-voting-registration-steps-description-color);
+      }
+
+      &:last-child {
+        margin-top: 15px;
+      }
     }
   }
 
