--- a/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsConfirm.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizard-steps/VotingRegistrationStepsConfirm.scss
@@ -1,10 +1,10 @@
 .component {
-  margin-top: 40px;
+  margin-top: 25px;
 
   .sadLogoContainer {
     display: flex;
     justify-content: center;
-    margin: 5px 0 25px;
+    margin: 0 0 25px;
 
     .sadLogoIcon {
       height: 80px;
