--- a/source/renderer/app/components/voting/voting-registration-wizard-steps/widgets/VotingRegistrationDialog.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizard-steps/widgets/VotingRegistrationDialog.scss
@@ -3,22 +3,18 @@
 .component {
   text-align: center;
 
-  .heading {
-    @extend %accentText;
-    font-size: 19px;
-    margin-bottom: 14px;
-    text-transform: uppercase;
-  }
+  :global {
+    .Dialog_title {
+      margin-bottom: 0;
+    }
 
-  .subtitle {
-    @extend %regularText;
-    font-size: 14px;
-    margin-bottom: 14px;
-    text-transform: uppercase;
+    .Dialog_subtitle {
+      text-transform: uppercase;
+    }
   }
 
   .votingRegistrationStepsIndicatorWrapper {
-    margin: auto;
+    margin: 4px auto 0;
     width: 450px;
 
     .stepIndicatorLabel {
@@ -38,10 +34,10 @@
     font-family: var(--font-regular);
     text-align: center;
   }
+
   .content {
     font-size: 16px;
     line-height: 1.38;
-    margin-bottom: 24px;
     margin-top: 20px;
     text-align: left;
   }
