[DDW-521] Display Transaction Metadata (#2338)
* [DDW-521] Prepare json-bigint integration

* [DDW-521] Fix json-bigint dependency and lockfile

* [DDW-521] Render transaction metadata

* [DDW-521] Fix flow issues

* [DDW-521] Add changelog entry

* [DDW-521] Finish api integration with json stringify rendering

* [DDW-521] improve handling of metadata maps

* [DDW-521] add more metadata map examples

* [DDW-521] Fix small linting issue

* [DDW-521] Add 0x prefix for metadata byte strings

* [DDW-521] Fix tx metadata toggling recalculation

* [DDW-521] Fix distance of tx metadata section

* [DDW-521] Translations and improvements

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -256,3 +256,18 @@
     }
   }
 }
+
+.metadataDisclaimer {
+  font-family: var(--font-light);
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.metadata {
+  margin-top: 20px;
+
+  pre {
+    white-space: pre-wrap;
+    word-break: break-all;
+  }
+}
