[DDW-541] Adds border to mobile apps QR codes on dark themes

--- a/source/renderer/app/components/voting/VotingInfo.scss
+++ b/source/renderer/app/components/voting/VotingInfo.scss
@@ -142,9 +142,11 @@
         }
 
         .qrCode {
+          border: 2px solid var(--theme-receive-qr-code-background-color);
           margin-top: 10px;
 
           svg {
+            display: block;
             height: 75px;
             width: 75px;
 
