[DDW-149] Update fees and deposit of undelegate wallet confirmation dialog

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -24,10 +24,13 @@
     margin-top: 20px;
   }
 
+  .undelegateWalletBox {
+    margin-top: 20px;
+  }
+
   .undelegateWalletBox,
   .deleteWalletBox {
     margin-bottom: 20px;
-    margin-top: 20px;
 
     span {
       color: var(--theme-input-label-color);
