--- a/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
@@ -35,22 +35,39 @@
     width: 100%;
   }
 
-  .feesWrapper {
+  .feesRow {
+    align-items: center;
+    display: flex;
     font-family: var(--font-medium);
     font-weight: 500;
+    justify-content: space-between;
     line-height: 1.38;
     margin-bottom: 20px;
 
-    .calculatingFeesLabel {
+    .feesWrapper,
+    .depositWrapper {
+      flex: 1;
+    }
+
+    .feesLabel,
+    .depositLabel {
+      color: var(--theme-delegation-steps-confirmation-fees-label-color);
+      margin-bottom: 6px;
+    }
+
+    .calculatingFeesLabel,
+    .calculatingDepositLabel {
       @include animated-ellipsis($duration: 1500, $width: 20px);
       --webkit-backface-visibility: hidden;
     }
 
-    .feesAmount {
+    .feesAmount,
+    .depositAmount {
       color: var(--theme-settings-undelegate-wallet-fees-amount-color);
       user-select: text;
 
-      .feesAmountLabel {
+      .feesAmountLabel,
+      .depositAmountLabel {
         font-family: var(--font-light);
       }
     }
