--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -9,7 +9,7 @@
   .switch {
     margin: 0;
   }
-  label {
+  .label {
     display: block;
     font-family: var(--font-semibold);
     font-size: 16px;
