--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -19,4 +19,13 @@
   p {
     margin-bottom: 20px;
   }
+  .currencyPoweredBy {
+    margin: 20px 0;
+    text-align: right;
+    font-size: 16px;
+    line-height: 1.38;
+  }
+  .currencyPoweredByLink {
+    font-size: 16px;
+  }
 }
