DDW-500 Implement design for native tokens - Summary screen - loading state for the asset section

--- a/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
@@ -9,6 +9,16 @@
   line-height: 1.36;
 }
 
+.syncingWrapper {
+  margin-bottom: 20px;
+
+  :global {
+    .LoadingSpinner_component {
+      margin-top: 10px;
+    }
+  }
+}
+
 .component {
   align-items: center;
   display: flex;
