--- a/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
@@ -73,6 +73,12 @@
     }
   }
 
+  .hardwareWalletStatusWrapper {
+    margin-top: 20px;
+    max-width: 640px;
+    width: 100%;
+  }
+
   .error {
     @include error-message;
     margin-top: 27px;
