--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -5,6 +5,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 20px;
+    p {
+      margin: 0;
+    }
+    :global {
+      .SimpleSwitch_root {
+        margin: 0;
+      }
+    }
+  }
+  .content {
+    position: relative;
   }
   .switch {
     margin: 0;
@@ -20,12 +32,35 @@
     margin-bottom: 20px;
   }
   .currencyPoweredBy {
-    margin: 20px 0;
-    text-align: right;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.38;
+    position: absolute;
+    text-align: right;
+    width: 100%;
   }
   .currencyPoweredByLink {
-    font-size: 16px;
+    font-size: 14px;
+  }
+  .disclaimer {
+    background-color: rgba(68, 91, 124, 0.1);
+    background: var(--theme-button-flat-background-color);
+    border-radius: 4px;
+    font-size: 14px;
+    margin-top: 20px;
+    margin: 20px 0;
+    padding: 10px 20px;
+    text-align: left;
+    span {
+      color: var(--theme-button-flat-text-color);
+      font-size: 12px;
+      font-style: italic;
+      line-height: 1.5;
+    }
+  }
+  .separator {
+    background: var(--theme-wallet-settings-section-separator-color);
+    border: none;
+    height: 1px;
+    margin: 15px 0;
   }
 }
