[DDW-452] Alignment adjust

--- a/source/renderer/app/components/wallet/summary/WalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummary.scss
@@ -90,7 +90,7 @@
   font-style: normal;
   letter-spacing: normal;
   line-height: 1.67;
-  margin-bottom: 5px;
+  margin: 10px 0 10px;
   opacity: 0.7;
   text-align: right;
 }
