[DDW-452] Styling adjustment

--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -34,6 +34,7 @@
   .currencyPoweredBy {
     font-size: 14px;
     line-height: 1.38;
+    margin-top: 2px;
     position: absolute;
     text-align: right;
     width: 100%;
