[DDW-452] Adjustments and fixings

--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -36,8 +36,9 @@
     line-height: 1.38;
     margin-top: 2px;
     position: absolute;
+    right: 0;
     text-align: right;
-    width: 100%;
+    z-index: 2;
   }
   .currencyPoweredByLink {
     font-size: 14px;
