[DDW-149] Update undeleate wallet variable naming

--- a/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
@@ -85,7 +85,7 @@
     text-align: center;
   }
 
-  .submitting {
+  .isSubmitting {
     box-shadow: none !important;
     @include loading-spinner('../../../assets/images/spinner-light.svg');
   }
