[DDW-149] Adjust undelegate wallet box margin

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -21,11 +21,7 @@
   }
 
   .walletPublicKeyBox {
-    margin-top: 20px;
-  }
-
-  .undelegateWalletBox {
-    margin-top: 20px;
+    margin: 20px 0;
   }
 
   .undelegateWalletBox,
