--- a/source/renderer/app/components/settings/categories/WalletsSettings.scss
+++ b/source/renderer/app/components/settings/categories/WalletsSettings.scss
@@ -1,26 +1,33 @@
 .component {
   color: var(--theme-support-settings-text-color);
   font-family: var(--font-regular);
+
   .description {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+
     p {
+      line-height: 22px;
       margin: 0;
     }
+
     :global {
       .SimpleSwitch_root {
         margin: 0;
       }
     }
   }
+
   .content {
     position: relative;
   }
+
   .switch {
     margin: 0;
   }
+
   .label {
     display: block;
     font-family: var(--font-semibold);
@@ -28,9 +35,11 @@
     line-height: 1.38;
     margin-bottom: 14px;
   }
+
   p {
     margin-bottom: 20px;
   }
+
   .currencyPoweredBy {
     font-size: 14px;
     line-height: 1.38;
@@ -40,18 +49,21 @@
     text-align: right;
     z-index: 2;
   }
+
   .currencyPoweredByLink {
     font-size: 14px;
   }
+
   .disclaimer {
     background: var(--theme-button-flat-background-color);
-    background-color: rgba(68, 91, 124, 0.1);
+    // background-color: rgba(68, 91, 124, 0.1);
     border-radius: 4px;
     font-size: 14px;
     margin: 20px 0;
     margin-top: 20px;
     padding: 10px 20px;
     text-align: left;
+
     span {
       color: var(--theme-button-flat-text-color);
       font-size: 12px;
@@ -59,6 +71,7 @@
       line-height: 1.5;
     }
   }
+
   .separator {
     background: var(--theme-wallet-settings-section-separator-color);
     border: none;
