--- a/source/renderer/app/components/wallet/summary/WalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummary.scss
@@ -72,7 +72,6 @@
   font-family: var(--font-bold);
   font-size: 22px;
   line-height: 1;
-  margin-bottom: 11px;
   text-align: right;
   user-select: none;
   word-break: break-all;
@@ -90,7 +89,7 @@
   font-style: normal;
   letter-spacing: normal;
   line-height: 1.67;
-  margin: 10px 0 10px;
+  margin: 15px 0 5px;
   opacity: 0.7;
   text-align: right;
 }
@@ -117,11 +116,20 @@
   font-family: var(--font-bold);
   font-size: 12px;
   line-height: 1.67;
-  opacity: 0.5;
   text-align: right;
 
+  em {
+    opacity: 0.5;
+  }
+
   &:hover {
-    opacity: 0.7;
+    em {
+      opacity: 0.8;
+    }
+
+    .currencySettingsIcon {
+      opacity: 1;
+    }
   }
 
   &.currencyIsFetchingRate em {
@@ -136,7 +144,9 @@
 
 .currencySettingsIcon {
   margin-left: 4px;
+  opacity: 0.6;
   vertical-align: middle;
+
   svg {
     height: 10px;
     width: 10px;
