[DDW-149] Update undelegate wallet panel styles

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -51,6 +51,14 @@
     }
   }
 
+  .undelegateWalletBox {
+    :global {
+      .SimpleButton_root.flat {
+        color: var(--theme-color-error);
+      }
+    }
+  }
+
   .deleteWalletBox {
     margin-bottom: 20px;
   }
