--- a/source/renderer/app/components/wallet/settings/UndelegateWalletButton.scss
+++ b/source/renderer/app/components/wallet/settings/UndelegateWalletButton.scss
@@ -1,9 +1,8 @@
 .root {
-  color: var(--theme-color-error) !important;
-  font-weight: 500 !important;
-  height: 36px !important;
-  line-height: 36px !important;
+  font-weight: 500;
+  height: 36px;
+  line-height: 36px;
   margin-left: 20px;
-  min-width: 160px !important;
-  width: 160px !important;
+  min-width: 160px;
+  width: 160px;
 }
