--- a/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
@@ -78,13 +78,7 @@
   padding: 0 20px 0 40px;
 }
 
-.assetName {
-  color: var(--theme-bordered-box-text-color);
-  font-family: var(--font-semibold);
-  font-size: 16px;
-  letter-spacing: 0.5px;
-  line-height: 1.38;
-  user-select: text;
+.assetToken {
 }
 
 .assetAmount {
