[DDW-500] Adds fingerprint to domain

--- a/source/renderer/app/components/wallet/summary/WalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummary.scss
@@ -40,7 +40,7 @@
   font-family: var(--font-bold);
   font-size: 22px;
   line-height: 1;
-  margin-bottom: 11px;
+  margin: 4px 0 11px;
   user-select: text;
   word-break: break-all;
 
