--- a/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/AssetsWalletSummary.scss
@@ -36,6 +36,10 @@
     padding: 20px 30px 20px 20px;
     width: calc(50% - 20px);
 
+    .assetsLeftContainer {
+      width: calc(100% - 77px);
+    }
+
     .assetRightContainer {
       .assetSendButton {
         border-radius: 3px;
