--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -1,20 +1,31 @@
 .component {
   position: relative;
+  width: 100%;
 }
-
-.policyId {
+.content {
+  display: flex;
+  width: 100%;
+}
+.fingerprint {
   background: var(--theme-widgets-asset-token-background-color);
   border-radius: 3px;
   color: var(--theme-widgets-asset-token-text-color);
-  display: inline-block;
   font-family: var(--font-regular);
   font-size: 11px;
   font-weight: bold;
   line-height: 1.27;
   padding: 4px;
+  white-space: nowrap;
 }
-
-.assetName {
+.policyId {
+  color: var(--theme-widgets-asset-token-text-color);
+  font-family: var(--font-regular);
+  font-size: 11px;
+  line-height: 1.27;
+  margin: 4px 0 4px 4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .metadata {
