--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -7,6 +7,7 @@
   background: var(--theme-widgets-asset-token-background-color);
   border-radius: 3px;
   color: var(--theme-widgets-asset-token-text-color);
+  display: inline-flex;
   font-family: var(--font-regular);
   font-size: 11px;
   font-weight: bold;
@@ -24,16 +25,41 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .metadata {
   display: none;
 }
 
-// .assetName {
-//   color: var(--theme-bordered-box-text-color);
-//   font-family: var(--font-semibold);
-//   font-size: 16px;
-//   letter-spacing: 0.5px;
-//   line-height: 1.38;
-//   user-select: text;
-// }
+.tooltipContent {
+  padding: 8px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .fingerprint {
+    margin-bottom: 10px;
+  }
+  dl {
+    width: 100%;
+  }
+  dt {
+    width: 67px;
+    display: inline-block;
+    font-family: var(--font-medium);
+    font-size: 12px;
+    line-height: 1.33;
+    text-align: right;
+    color: #5e6066;
+  }
+  dd {
+    display: inline-flex;
+    font-size: 12px;
+    line-height: 1.33;
+    margin: 0 0 0 10px;
+    width: calc(100% - 87px);
+    em {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
