DDW-500 Implement design for native tokens - fixing - fixes for wallet send fields

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -52,6 +52,8 @@
 
 .estimatedFeeInput {
   input {
+    background-color: var(--rp-input-bg-color-disabled) !important;
+    border-color: var(--rp-input-bg-color-disabled) !important;
     font-family: var(--font-regular);
     pointer-events: none;
 
