DDW-500 Implement design for native tokens - fixes for wallet send fields

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -165,6 +165,15 @@
   }
 }
 
+.minAdaRequired {
+  color: var(--theme-input-placeholder-color);
+  font-family: var(--font-regular);
+  font-size: 14px;
+  line-height: 1.36;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
 .addAssetButton {
   font-family: var(--font-semibold);
   font-size: 10px;
@@ -354,6 +363,35 @@
       }
     }
   }
+}
+
+.infoIcon {
+  opacity: 0.4;
+  padding-left: 4px;
+  position: relative;
+  top: 1px;
+  transform: translateY(2px);
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  > svg {
+    height: 10px;
+    width: 10px;
+  }
+
+  path {
+    fill: var(--theme-input-label-color);
+  }
+}
+
+.assetItem {
+  padding-top: 10px;
+}
+
+.minAdaTooltipContent {
+  text-align: center;
 }
 
 :global {
